[package]
name = "gsearch"
version = "0.1.0"
authors = ["Elias Nau <eliasnau09@gmail.com>"]
description = "A rust crate for interacting with the Google Custom Search API"
readme = "README.md"
homepage = "https://github.com/eliasnau/gsearch"
repository = "https://github.com/eliasnau/gsearch"
keywords = ["google", "search", "google-search", "google search"]



[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1"
urlencoding = "2.0.0"

[lib]
name = "gsearch"
path = "src/lib.rs"